# transrights

./: .gitignore  AST.fs  Cargo.toml  Compiler.fs  Documentor.fs  Example  Example.acui  Example.transrights  Parser.fs  Program.cs  Program.fs  README.md  acui.csproj  acui.fsproj  meson.build  rjiendaujughyi.csproj
Acui/Acui.AST/: AST.cs
Acui/Acui.CLI/: Entrypoint.cs
Acui/Acui.Parser/: Parser.cs
Acui/Acui.Stdlib/: meson.build
Acui/Acui.Stdlib/FoundationKit/: CUtil.h  Foundation.c  Foundation.h  Logger.c  Logger.h  Objects.c  Objects.h  String.c
Rjiendaujughyi.Parser/: Ast.cs  Parser.cs
Rjiendaujughyi/Rjiendaujughyi.AST/: AST.cs
Rjiendaujughyi/Rjiendaujughyi.Parser/: Parser.cs
src/: ast.rs  grammar.lalrpop  main.rs
stdlib/FoundationKit/: CUtil.h  Logger.c  Logger.h  Objects.c  Objects.h  Reader.c  Reader.h  String.c  String.h
